--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <h1>Character Network Analysis Tool</h1>
         <form id="textForm">
             <div class="form-group">
-                <textarea id="textInput" class="form-control" rows="5" placeholder="Enter text here..."></textarea>
+                <textarea id="textInput" class="form-control" rows="5" placeholder="Enter synoptic text here up to 1000 words. (e.g. Movie plot summaries from Wikipedia)"></textarea>
             </div>
             <button type="submit" class="btn btn-primary">Analyze Text</button>
         </form>
