--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
             <div class="form-group">
                 <textarea id="textInput" class="form-control" rows="5" placeholder="Paste synoptic text here. (e.g. Movie plot summaries from Wikipedia)"></textarea>
                 <small class="form-text text-muted">
-                    Try <a href="https://en.wikipedia.org/wiki/Dune_(2021_film)" target="_blank">Dune</a> or <a href="https://en.wikipedia.org/wiki/Inception" target="_blank">Inception</a>
+                    Try <a href="https://en.wikipedia.org/wiki/Dune_(2021_film)" target="_blank">Dune</a> or <a href="https://en.wikipedia.org/wiki/Ricky_Stanicky" target="_blank">Ricky Stanicky</a>
                 </small>
             </div>
             <button type="submit" class="btn btn-primary">Analyze Text</button>
